# ipr

./: .gitignore  README.md  docker-compose-app.yml  docker-compose-storage.yml  docker-compose.yml
MC1/: .env  Dockerfile  Makefile  alembic.ini  app-entrypoint.sh  pyproject.toml
MC1/alembic/: env.py
MC1/alembic/versions/: a24c1f89c87b_initial.py
MC1/apps/: config.py  database.py  main.py  models.py  routers.py  schemas.py
MC1/apps/core/: config.py
MC1/apps/db/: database.py
MC1/apps/services/: messages_generator.py  messages_manager.py  ws_manager.py
MC1/src/: database.py
MC2/: Dockerfile  app-entrypoint.sh  pyproject.toml
MC2/apps/: main.py  routers.py
MC2/apps/core/: config.py
MC2/apps/services/: messages_consumer.py  messages_producer.py  ws_manager.py
MC3/: Dockerfile  pyproject.toml
MC3/apps/: main.py
MC3/apps/core/: config.py
MC3/apps/services/: api_client.py  messages_consumer.py  messages_producer.py
etc/: otel-collector-config.yaml  prometheus.yml
